# Fourier_Transformation

./: README.md  app.py  index.html  pyproject.toml
experiment/: experiment.ipynb
src/animation/css/: style.css
src/animation/js/: animation_controller.js  circles.js  epicycle_system.js  main.js
src/model/: contour.py
